# gajim

./: .flake8  .gitignore  .gitlab-ci.yml  .hgignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  COPYING  ChangeLog  Changelog  MANIFEST.in  Makefile  Makefile.am  Makefile.in  PKGBUILD  README  README.html  README.md  README.osx  README.transifex  REUSE.toml  THANKS  THANKS.artists  TODO.osx  TODO.pep  aclocal.m4  appveyor.yml  archive.dbml  autogen.sh  build.bat  build.py  codespell.conf  config.h.in  configure  configure.ac  dependencys.ps1  download.ps1  epydoc.conf  gajim-portable.nsi  gajim-remote.1  (+24 more)
data/: Makefile.am  Makefile.in  defs.py.in  gajim-history-manager.1  gajim-remote.1  gajim-remote.1.md  gajim-remote.desktop.in  gajim-remote.desktop.in.in  gajim.1  gajim.1.md  gajim.desktop.in.in  gajim.doap  org.gajim.Gajim.appdata.xml.in  org.gajim.Gajim.desktop.in  org.gajim.Gajim.gschema.xml  org.gajim.Gajim.metainfo.xml.in
data/activities/: Makefile.am
data/emoticons/: Makefile.am  Makefile.in
data/glade/: Makefile.am  Makefile.in  account_context_menu.glade  account_creation_wizard_window.glade  account_modification_window.glade  accounts_window.glade  add_new_contact_window.glade  adhoc_commands_window.glade  advanced_configuration_window.glade  advanced_menuitem_menu.glade  advanced_notifications_window.glade  archiving_preferences_window.glade  atom_entry_window.glade  blocked_contacts_window.glade  change_activity_dialog.glade  change_mood_dialog.glade  change_password_dialog.glade  change_status_message_dialog.glade  chat_context_menu.glade  chat_control_popup_menu.glade  chat_to_muc_window.glade  choose_gpg_key_dialog.glade  contact_context_menu.glade  contact_otr_window.glade  data_form_window.glade  dubbleinput_dialog.glade  edit_groups_dialog.glade  esession_info_window.glade  features_window.glade  filetransfers.glade  gajim_themes_window.glade  gc_control_popup_menu.glade  gc_occupants_menu.glade  groups_post_window.glade  gtkgui.glade  history_manager.glade  history_window.glade  input_dialog.glade  input_text_dialog.glade  invitation_received_dialog.glade  (+38 more)
data/gui/: Makefile.am  account_context_menu.ui  account_creation_wizard_window.ui  accounts_window.ui  add_new_contact_window.ui  adhoc_commands_window.ui  advanced_configuration_window.ui  advanced_menuitem_menu.ui  advanced_notifications_window.ui  archiving_313_preferences_window.ui  archiving_preferences_window.ui  atom_entry_window.ui  blocked_contacts_window.ui  change_activity_dialog.ui  change_mood_dialog.ui  change_password_dialog.ui  change_status_message_dialog.ui  chat_context_menu.ui  chat_control.ui  chat_to_muc_window.ui  choose_gpg_key_dialog.ui  contact_context_menu.ui  contact_otr_window.ui  data_form_window.ui  dubbleinput_dialog.ui  edit_groups_dialog.ui  esession_info_window.ui  exception_dialog.ui  features_window.ui  filetransfers.ui  gajim_themes_window.ui  gc_control_popup_menu.ui  gc_occupants_menu.ui  groupchat_control.ui  groups_post_window.ui  history_manager.ui  history_window.ui  input_dialog.ui  input_text_dialog.ui  item_archiving_preferences_window.ui  (+34 more)
data/icons/: Makefile.am
data/iconsets/: Makefile.am  Makefile.in
data/moods/: Makefile.am
data/other/: cacerts.pem  dh4096.pem  servers.xml
data/pixmaps/: Makefile.am  Makefile.in  gajim.icns
data/style/: gajim.css
gajim/: Makefile.am  __init__.py  accounts_window.py  adhoc_commands.py  advanced_configuration_window.py  app_actions.py  application.py  atom_window.py  cell_renderer_image.py  chat_control.py  chat_control_base.py  config.py  config.py.in  conversation_textview.py  dataforms_widget.py  dialog_messages.py  dialogs.py  disco.py  emoticons.py  features_window.py  filechoosers.py  filetransfers_window.py  gajim-remote.py  gajim.py  gajim_remote.py  gajim_themes_window.py  groupchat_control.py  groups.py  gtkexcepthook.py  gtkgui_helpers.py  gtkspell.py  gui_interface.py  gui_menu_builder.py  history_manager.py  history_sync.py  history_window.py  htmltextview.py  ipython_view.py  logind_listener.py  main.py  (+25 more)
gajim/command_system/: dispatcher.py  errors.py  framework.py  mapping.py  tools.py
gajim/common/: account.py  aes.py  app.py  application.py  atom.py  call_manager.py  caps_cache.py  cert_store.py  check_X509.py  check_paths.py  client.py  client_modules.py  commands.py  config.py  configpaths.py  connection.py  connection_handlers.py  connection_handlers_events.py  const.py  contacts.py  crypto.py  css_config.py  dataforms.py  dbus_support.py  defs.py  dh.py  enum.py  events.py  exceptions.py  file_props.py  file_transfer_manager.py  filetransfer.py  fuzzyclock.py  gajim.py  ged.py  gpg.py  helpers.py  http_manager.py  httpupload.py  i18n.py  (+40 more)
gajim/data/: Makefile.am
gajim/dev/: ipython_view.py
gajim/gtk/: __init__.py  about.py  account_page.py  account_side_bar.py  account_wizard.py  accounts.py  activity_list.py  activity_page.py  activity_side_bar.py  add_contact.py  address_share_popover.py  adhoc.py  adhoc_commands.py  adhoc_muc.py  advanced_config.py  alert.py  app_page.py  app_side_bar.py  application.py  apply_button_box.py  assistant.py  atom.py  audio_player.py  avatar.py  avatar_selector.py  blocking.py  bookmarks.py  builder.py  builder.pyi  call_widget.py  (+152 more)
plugins/: Makefile.am  __init__.py  acronyms_expander.py  gtkgui.glade  gtkgui.py  length_notifier.py  logger.py
src/: Makefile  Makefile.am  Makefile.in  adhoc_commands.py  advanced.py  advanced_configuration_window.py  app_actions.py  application.py  atom_window.py  cell_renderer_image.py  chat.py  chat_control.py  chat_control_base.py  check_for_new_version.py  config.py  conversation_textview.py  dataforms.py  dataforms_widget.py  dbus_support.py  dialogs.py  disco.py  eggtrayicon.c  features_window.py  filetransfers_window.py  gajim-remote-plugin.py  gajim-remote.py  gajim.py  gajim_themes_window.py  groupchat_control.py  groupchat_window.py  groups.py  gtkexcepthook.py  gtkgui.glade  gtkgui.py  gtkgui_helpers.py  gtkspell.py  gtkspellmodule.c  gui_interface.py  gui_menu_builder.py  history_manager.glade  (+41 more)
(+1258 files in other folders)
